import ressourcix.domain.Employee

interface Graphical {
    var employees: MutableList<Employee>
}