/**
 * Interface für die Kalenderausgabe.
 *
 */
interface CalendarOutput {
    fun printYearPlan(year: Int, employees: List<Employee>)
}
