enum class MessageType {
    INFO, WARNING, ERROR
}