/**
 * Rolle eines Mitarbeiters.
 */
enum class Role {
    APPRENTICE,
    STAFF,
    TEAM_LEAD,
    MANAGER
}
