/**
 * Status pro Kalenderwoche.
 *
 * In diesem Minimal-Projekt brauchen wir nur GENERATED + APPROVED/REJECTED,
 * damit Wochen einzeln bewertet werden können.
 */
enum class VacationStatus {
    GENERATED,
    APPROVED,
    REJECTED
}
